src/objects/gdf_Balance__c.object
<CustomObject>
    <fields>
        <fullName>gdf_Balance_Date__c</fullName>
        <label>Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Balances</relationshipLabel>
        <relationshipName>gdf_Balances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Balance</label>
    <nameField>
        <displayFormat>BAL{000000}</displayFormat>
        <label>Balance Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>